fix installation problem, add scrollbar to former

--- a/src/css/former.css
+++ b/src/css/former.css
@@ -208,3 +208,7 @@ hr.style-one {
 #download_images{
   clear: both;
 }
+
+#form-content{
+  overflow-y:scroll;
+}
